2008-08-04  Ivan frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-metadata.c: Now uses the indexer to write
	metadata in the database.
	
	* src/trackerd/tracker-db.[ch]
	(tracker_db_metadata_get_array): Added this new method moving code
	from tracker-metadata.
	Removed old commented code.

2008-08-04  Ivan Frade  <ivan.frade@nokia.com>

	* data/services/audio.metadata: The embedded properties cannot be
	written by the user. Marked "PlayCount" and "Last play date" as
	not embedded.
	
2008-08-04  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-type-utils.[ch]
	(tracker_string_to_string_list): new helper function.
	
2008-08-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-monitor.c: Added black listing. This works
	slightly differently to TRUNK. Files are given a black list count
	for the number of times an event is seen. If a file gets an event
	more than 5 times they are black listed for 30 seconds, after that
	time the item is taken off the black list and the indexer is
	prompted to reindex the file. The 30 second period has to be
	completely clear of events for that file during that time. If an
	event occurs in the mean time, the timestamp is reset.

2008-08-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.[ch]:
	* src/trackerd/tracker-processor.c: Removed TrackerHal
	dependency, it is unused in this module now.

2008-08-04  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-indexer-module.[ch]
	(tracker_indexer_module_file_get_service_type): Call the function
	tracker_module_file_get_service_type in the module. If this
	function doesnt exist, use the module name as service type of the uri.
	* src/tracker-indexer/tracker-indexer.c
	* src/tracker-indexer/tracker-module.h
	* src/tracker-indexer/modules/dummy.c
	* src/tracker-indexer/modules/files.c
	(tracker_module_file_get_service_type): New function to obtain the
	service type of an uri. Implementation in the files module and